changed bullet and link colors to gold, fixed some spacing issues with dynamic description

--- a/css/outer.css
+++ b/css/outer.css
@@ -46,6 +46,15 @@ p {
   color: #616161;
   font-size: 1.1em !important;
 }
+.quote {
+    font-style: italic;
+    color: #b08449 !important;
+    font-size: 1.3em !important;
+    margin-bottom: 2em; 
+    margin-top: 2em; 
+    word-spacing: 3px; 
+    text-align: justify;
+}
 
 .remove-padding {
   padding-left: 0;
@@ -77,7 +86,7 @@ p {
 }
 /* blue line w dot sectioning piece */
 .sectionbar {
-  background-color: #90a5c0;
+  background-color: #b08449;
   font-size: 2px;
   margin-top: 2.3rem;
   line-height: 1.5;
@@ -94,7 +103,7 @@ p {
 .sectiondot {
   height: 12px;
   width: 12px;
-  background-color: #90a5c0;
+  background-color: #b08449;
   border-radius: 50%;
   display: inline-block;
   margin-top: 2rem;
@@ -790,6 +799,9 @@ div#scroll-bar {
   }
   .dynamicthumbnail {
     max-width: 70%;
+  }
+  .text_small {
+    max-width: 65%;
   }
 }
 @media screen and (max-width: 1100px) {
